# dropmail-cli

./: LICENSE  README.md  requirements.txt  setup.cfg
src/dropmail_cli/: cli.py
