[metadata]
name = dropmail-cli
version = 1.0.0
author = Danick Blouin
author_email = contact@danickblouin.com
description = CLI client for temporary email addresses using dropmail.me
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/danickblouin/dropmail-cli
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = = src
packages = find:
python_requires = >=3.8
install_requires =
    requests >=2.26.0
    colorama >=0.4.4

[options.entry_points]
console_scripts =
    dropmail = dropmail_cli.cli:main

[options.extras_require]
clipboard =
    pyperclip >=1.8.2
